Title: 아름다운 수열 2, Time: 2484ms, Memory: 176MB, Status: Memory Limit Exceed - CodeTree